plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.jas'
version = '1.0.3'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    audioTaggerVersion = '2.0.3'
    junitVersion = '5.7.0'
    slf4jVersion = '2.0.16'
    aspectjVersion = '1.9.22.1'
    messengineVersion = '0.1.0'
    festSwingVersion = '1.2.1'
    javaXmlBindVersion = '2.3.1'
    javaAnnotationVersion = '1.3.2'
    commonsLangVersion = '3.12.0'
    mockitoVersion = '3.12.4'
    mockitoAllVersion = '1.10.19'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation "org.aspectj:aspectjtools:$aspectjVersion"
    implementation "org:jaudiotagger:$audioTaggerVersion"
    implementation "org.asmatron:messengine:$messengineVersion"
    implementation "org.apache.commons:commons-lang3:$commonsLangVersion"
    implementation "org.slf4j:slf4j-api:$slf4jVersion"
    implementation "javax.xml.bind:jaxb-api:$javaXmlBindVersion"
    implementation "javax.annotation:javax.annotation-api:$javaAnnotationVersion"
    implementation "org.easytesting:fest-swing:$festSwingVersion"
    testImplementation "org.mockito:mockito-core:$mockitoVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    implementation files('lib/JavaMusicbrainz.jar')
    implementation files('lib/last.fm-bindings-0.1.0.jar')
}

test {
    useJUnitPlatform()
}